<!--
 - widgets_strings.xml app
 - Created by Ulises Gonzalez on 23/02/24
 - Copyright (c) 2023. All rights reserved.
-->
<resources>
    <!--Strings Close Dialog-->
    <string name="app_accept">Accept</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_message">Message</string>
    <string name="app_are_you_sure_about_exiting_the_app">Are you sure about exiting the app?</string>
    <!--Strings Home Fragment-->
    <string name="app_recipes">Recipes</string>
    <string name="app_search">Search Recipe</string>
    <!--Strings Detail Fragment-->
    <string name="app_ingredients">Ingredients</string>
    <string name="app_steeps">Steeps</string>
    <string name="app_back">Back</string>
    <string name="origin">Origin</string>
    <string name="app_description">Description</string>
    <string name="app_go_to_map">Go to Map</string>
    <string name="app_know_the_origin_of_the_dish">Know the origin of the dish by looking at its location on the map</string>
    <!--Strings Map Fragment-->
    <string name="app_click_on_the_pointer_to_know_name">Click on the pointer to know name</string>
    <string name="app_map">Map</string>
    <string name="app_empty_list">Empty list</string>
    <string name="app_here_you_can_see_your_recipes">Here you can see your recipes</string>
</resources>
