<?xml version="1.0" encoding="utf-8"?><!--
 - fragment_detail.xml
 - Created by Ulises Gonzalez on 23/02/24
 - Copyright (c) 2023. All rights reserved.
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:visibility="gone">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/widgets_white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/recipeImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/widgets_image"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/il_food"
                tools:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_image_shadow" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/widgets_padding_size">

            <TextView
                android:id="@+id/nameTextView"
                style="@style/widgets_titleText.bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widgets_margin_size.small"
                android:visibility="gone"
                tools:text="Recipe name"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/smallDescriptionTextView"
                style="@style/widgets_normalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Small description"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widgets_margin_size"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">

                <com.delifit.delifitmobile.widgets.text.element.Element
                    android:id="@+id/timeCardElement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/widgets_margin_size.big"
                    android:visibility="gone"
                    app:imageCardElement="@drawable/ic_timer"
                    tools:visibility="visible" />

                <com.delifit.delifitmobile.widgets.text.element.Element
                    android:id="@+id/caloriesCardElement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/widgets_margin_size.big"
                    android:visibility="gone"
                    app:imageCardElement="@drawable/ic_fire"
                    tools:visibility="visible" />

                <com.delifit.delifitmobile.widgets.text.element.Element
                    android:id="@+id/levelCardElement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:imageCardElement="@drawable/ic_circle"
                    tools:visibility="visible" />

            </LinearLayout>

            <TextView
                style="@style/widgets_subtitleText.bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widgets_margin_size.small"
                android:text="@string/app_description" />

            <TextView
                android:id="@+id/descriptionTextView"
                style="@style/widgets_normalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s."
                tools:visibility="visible" />

            <TextView
                style="@style/widgets_subtitleText.bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widgets_margin_size"
                android:text="@string/app_ingredients" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_ingredient_list" />

            <TextView
                style="@style/widgets_subtitleText.bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widgets_margin_size"
                android:text="@string/app_steeps" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stepsListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_steps_list" />

            <TextView
                style="@style/widgets_subtitleText.bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widgets_margin_size"
                android:text="@string/origin" />

            <TextView
                style="@style/widgets_normalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_know_the_origin_of_the_dish" />

            <Button
                android:id="@+id/mapButton"
                style="@style/widgets_secondary_button_style"
                android:layout_marginTop="@dimen/widgets_margin_size.big"
                android:text="@string/app_go_to_map" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/widgets_margin_size.big"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/backButton"
                style="@style/widgets_primary_button_style"
                android:text="@string/app_back" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
